2002-02-15  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* src/command.c src/plot.c src/os2/dialogs.c src/os2/gclient.c
	src/os2/gnupmdrv.c src/os2/gnupmdrv.h: Clean up procedure to find 
	help files on OS/2. Convert //-style comments to /**/

2002-02-15  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/graphics.c src/mouse.c src/plot3d.c src/save.c src/show.c:
	Let them compile without PM3D #defined.

2002-02-15  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* docs/Makefile.in: Add missing .trm files to CORETERM. Always build
	gnuplot.info. Improve install and uninstall targets.

	* tutorial/Makefile.am.in: Use $(top_srcdir) instead of hardcoded path.

2002-02-15  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/pm3d.c: Fix of cb-axis autoscale for binary and with palette
	splots.

2002-02-15  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/show.c (show_version): Have "show version long" display the
 	currently selected path to the X11 driver, too.

2002-02-15  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/set.c: Command 'set grid front|back' should select the
 	default grid.

2002-02-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/set.c src/unset.c: Commands '(un)set log ...' now correctly
 	parse the argument.

	* src/tables.h src/tables.c: New routine lookup_table_nth_reverse.

2002-02-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* NEWS: Mention changes to X11 outboard driver path and removal of
 	--with-x11-driver.

	* INSTALL: Update configure --help excerpt: mention --exec-prefix,
 	explain gnuplot_x11 installation place, and remove mention of
 	--with-x11-driver option.  Change instructions on running
 	un-installed gnuplot to use GNUPLOT_DRIVER_DIR instead of PATH
 	overrides.

2002-02-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/stdfn.h src/stdfn.c src/command.c: Let the
	'pause' command support subsecond waiting time resolution. Macro 