@@ -1,3 +1,9 @@
+2002-02-16  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/plot3d.c: Let the default legend title for  splot 'a.dat' binary
+	is just  'a.dat'  instead of the current  'a.dat' binary  while for
+	'a.dat' binary using 2:1:3  all 4 words as now.
+
 2002-02-15  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>
 
 	* src/command.c src/plot.c src/os2/dialogs.c src/os2/gclient.c
